ops/k8s/dam.yml
apiVersion: v1
kind: Service
metadata:
    name: pimcore-demo-php
    namespace: default
    labels:
        app.kubernetes.io/name: pimcore-demo
        app.kubernetes.io/instance: pimcore-demo
spec:
    type: ClusterIP
    ports:
        - port: 80
          targetPort: 80
    selector:
        app.kubernetes.io/name: pimcore-demo
        app.kubernetes.io/instance: pimcore-demo-php
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: pimcore-demo-php
    namespace: default
    labels:
        app.kubernetes.io/name: pimcore-demo
        app.kubernetes.io/instance: pimcore-demo
spec:
    replicas: 1
    selector:
        matchLabels:
            app.kubernetes.io/name: pimcore-demo
            app.kubernetes.io/instance: pimcore-demo-php
    template:
        metadata:
            labels:
                app.kubernetes.io/name: pimcore-demo
                app.kubernetes.io/instance: pimcore-demo-php
        spec:
            containers:
                - name: php
                  securityContext:
                    {}
                  image: corsgmbh/pimcore-demo:php-alpine
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 9000
                  resources:
                      limits:
                          cpu: "1"
                          memory: 1G
                      requests:
                          cpu: "0.5"
                          memory: 1G
                  volumeMounts:
                      - name: php-ini
                        mountPath: /usr/local/etc/php/php.ini
                        subPath: php.ini
                      - name: php-config
                        mountPath: /usr/local/etc/php-fpm.conf
                        subPath: php-config.conf
                      - name: php-pool-config
                        mountPath: /usr/local/etc/php-fpm.d/www.conf
                        subPath: php-pool-config.conf
                - name: nginx
                  image: corsgmbh/pimcore-demo:nginx
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 80
                  resources:
                      limits:
                          cpu: 500m
                          ephemeral-storage: 1Gi
                          memory: 512Mi
                      requests:
                          cpu: 100m
                          ephemeral-storage: 1Gi
                          memory: 64Mi
                  volumeMounts:
                      - mountPath: /etc/nginx/conf.d
                        name: server-block
                - name: mysql
                  image: "mysql:8"
                  imagePullPolicy:
                  resources:
                    {}
            volumes:
                - name: server-block
                  configMap:
                      name: pimcore-demo-php-nginx-server-block
                - name: php-ini
                  configMap:
                      name: pimcore-demo-phpfpm-ini
                - name: php-config
                  configMap:
                      name: pimcore-demo-phpfpm-conf
                - name: php-pool-config
                  configMap:
                      name: pimcore-demo-phpfpm-pool-conf
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pimcore-demo
  namespace: default
  labels:
    app.kubernetes.io/name: pimcore-demo
    app.kubernetes.io/instance: pimcore-demo
spec:
  ingressClassName: nginx
  # tls:
  #     - hosts:
  #           - "pimcore-demo.ofcors.cloud"
  #       secretName: pimcore-demo-letsencrypt-tls
  rules:
  - host: "pimcore.k8s"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: pimcore-demo-php
              port:
                number: 80
